--- a/BrainRoyale/package.json
+++ b/BrainRoyale/package.json
@@ -4,10 +4,17 @@
   "version": "0.0.0",
   "type": "commonjs",
   "scripts": {
-    "dev": "vite",
+    "dev": "node src/index.js",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "deploy": "node start.js",
+    "db:migrate": "sequelize db:migrate",
+    "db:seed": "sequelize db:seed:all",
+    "db:drop": "sequelize db:drop",
+    "db:create": "sequelize db:create",
+    "db:reset": "run-s db:drop db:create"
+
   },
   "dependencies": {
     "@koa/router": "^12.0.0",
